--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 composer.phar
 /vendor/
 
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
-# composer.lock
+# This package is simple libraby, we should not commit composer.lock
+composer.lock
+
+# JetBrains IDE files
+.idea/
+
+test.lead.php
